<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />
    <TextView
        android:id="@+id/massTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/mass_label"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintEnd_toStartOf="@+id/massET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/massET" />

    <EditText
        android:id="@+id/massET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/heightET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/massUnitTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/mass_unit_kg"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/massET"
        app:layout_constraintTop_toTopOf="@+id/massTV" />

    <TextView
        android:id="@+id/heightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/height_label"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintBottom_toBottomOf="@+id/heightET"
        app:layout_constraintEnd_toStartOf="@+id/heightET"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/heightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/massET" />

    <TextView
        android:id="@+id/heightUnitTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/height_units_cm"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/heightET"
        app:layout_constraintTop_toTopOf="@+id/heightTV"/>

    <TextView
        android:id="@+id/bmiTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:onClick="resultDescribe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/guideline" />
    <Button
        android:id="@+id/countBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/margin_distance"
        android:onClick="count"
        android:text="@string/count_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiTV" />

</androidx.constraintlayout.widget.ConstraintLayout>