<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item"
    android:padding="@dimen/padding">
    <TextView
        android:id="@+id/massLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mass_label"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/massTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/massLabelTV"/>
    <TextView
        android:id="@+id/massUnitTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin"
        android:text="@string/mass_unit_kg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/massTV"/>
    <TextView
        android:id="@+id/heightLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_label"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/margin_distance_l"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/massUnitTV"/>
    <TextView
        android:id="@+id/heightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/heightLabelTV"/>
    <TextView
        android:id="@+id/heightUnitTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin"
        android:text="@string/height_units_cm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/heightTV"/>
    <TextView
        android:id="@+id/bmiLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bmi_label"
        android:layout_margin="@dimen/margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/massLabelTV"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/bmiValueTV"
        android:layout_width="@dimen/text_size_l"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/massLabelTV"
        app:layout_constraintStart_toEndOf="@+id/bmiLabelTV"/>

    <TextView
        android:id="@+id/bmiResCategoryTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/margin_distance_l"
        android:layout_marginTop="@dimen/margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/massLabelTV"
        app:layout_constraintStart_toEndOf="@+id/bmiValueTV"/>
    <TextView
        android:id="@+id/dateTV"
        android:layout_width="@dimen/text_size_l"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>